--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
-<html lang="pt_BR">
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parcel</title>
+    <title>EBAC Tech Talks</title>
+    <!-- ROBOTO FONT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <!-- Não precisa compilar quando utilizar o Parcel! Pode apontar direto para o scss. -->
     <link rel="stylesheet" href="styles/main.scss">
-    <script src="/src/scripts/main.js"></script>
+
 </head>
+
 <body>
-    <h1>Hey Parcel!</h1>
+    <header class="hero">
+        <div class="container">
+            <img class="hero__logo" src="./images/ebac_logo.svg" alt="EBAC">
+            <p class="hero__text">O maior evento de tecnologia do Brasil começa em 10d 12h 20m 14s</p>
+        </div>
+
+    </header>
+
+    <script src="/src/scripts/main.js"></script>
 </body>
+
 </html>
