Modify index.html, add _infos_bar.scss, modify main.scss

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,22 @@
             <img class="hero__logo" src="./images/ebac_logo.svg" alt="EBAC">
             <p class="hero__text">O maior evento de tecnologia do Brasil começa em 10d 12h 20m 14s</p>
         </div>
-
+        <div class="infos-bar">
+            <ul>
+                <li class="infos-bar__item">
+                    <b>Localização</b>
+                    Alianz Park - Barra Funda, São Paulo - SP
+                </li>
+                <li class="infos-bar__item">
+                    <b>Preço</b>
+                    A partir de R$ 129,90
+                </li>
+                <li class="infos-bar__item">
+                    <b>Quando</b>
+                    12/08/2024 - às 19hrs
+                </li>
+            </ul>
+        </div>
     </header>
 
     <script src="/src/scripts/main.js"></script>
