finish hero section

--- a/src/index.html
+++ b/src/index.html
@@ -19,24 +19,25 @@
         <div class="container">
             <img class="hero__logo" src="./images/ebac_logo.svg" alt="EBAC">
             <p class="hero__text">O maior evento de tecnologia do Brasil começa em 10d 12h 20m 14s</p>
-        </div>
         <div class="infos-bar">
-            <ul>
-                <li class="infos-bar__item">
+            <ul class="infos-bar__list">
+                <li class="infos-bar__list__item">
                     <b>Localização</b>
                     Alianz Park - Barra Funda, São Paulo - SP
                 </li>
-                <li class="infos-bar__item">
+                <li class="infos-bar__list__item">
                     <b>Preço</b>
                     A partir de R$ 129,90
                 </li>
-                <li class="infos-bar__item">
+                <li class="infos-bar__list__item">
                     <b>Quando</b>
                     12/08/2024 - às 19hrs
                 </li>
             </ul>
+            <a class="button button--primary" href="#">Garanta sua vaga!</a>
         </div>
     </header>
+</div>
 
     <script src="/src/scripts/main.js"></script>
 </body>
